@@ -28,11 +28,6 @@
 #include <tls.h>
 #include <unistd.h>
 
-#ifndef __OpenBSD__
-# define pledge(a, b) 0
-# define unveil(a, b) 0
-#endif
-
 #ifndef INFTIM
 # define INFTIM -1
 #endif
@@ -51,6 +46,12 @@
 #define MAX_USERS	64
 
 #define HOSTSLEN	64
+
+#define LOGE(c, fmt, ...) logs(LOG_ERR,     c, fmt, __VA_ARGS__)
+#define LOGW(c, fmt, ...) logs(LOG_WARNING, c, fmt, __VA_ARGS__)
+#define LOGN(c, fmt, ...) logs(LOG_NOTICE,  c, fmt, __VA_ARGS__)
+#define LOGI(c, fmt, ...) logs(LOG_INFO,    c, fmt, __VA_ARGS__)
+#define LOGD(c, fmt, ...) logs(LOG_DEBUG,   c, fmt, __VA_ARGS__)
 
 struct vhost {
 	const char	*domain;
@@ -118,6 +119,8 @@ enum {
 };
 
 /* gmid.c */
+__attribute__ ((format (printf, 3, 4))) void logs(int, struct client*, const char*, ...);
+
 void		 sig_handler(int);
 int		 starts_with(const char*, const char*);
 
@@ -149,7 +152,6 @@ void		 yyerror(const char*);
 int		 parse_portno(const char*);
 void		 parse_conf(const char*);
 void		 load_vhosts(struct tls_config*);
-void		 sandbox();
 
 void		 usage(const char*);
 
@@ -157,6 +159,9 @@ extern FILE *yyin;
 extern int yylineno;
 extern int yyparse(void);
 extern int yylex(void);
+
+/* sandbox.c */
+void		 sandbox();
 
 /* utf8.c */
 int		 valid_multibyte_utf8(struct parser*);
